Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-50902

TIFF with unspecified alpha-channels loads as invalid ARGB32PM

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.6.1
    • 5.5.1
    • Image formats
    • None
    • Windows, Mac, Linux

      I have some TIFF images that I'm including in my project as resources and load in to my widget as pixmaps. These TIFF images include an alpha channel which I use to make portions of each image transparent. I then render a video player widget that mimics Apple's old Quicktime 7 player interface. On versions of Qt prior to 5.5.1, the images rendered perfectly. Can't tell the difference between my widget and Apple's quicktime player, but on 5.5.1, I see spurious black pixels rendered in areas where the pixmaps should be transparent.

        1. Qt5_4_0.tiff
          70 kB
        2. Qt5_5_1.tiff
          75 kB
        3. LAUVideoLabel.zip
          176 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            allan.jensen Allan Sandfeld Jensen
            drhalftone Daniel Lau
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes