Improve interpretation of undefined alpha-channels

Libtiff does not process the alpha-channel if its definition is not
specified. However to match how Qt used to save TIFF images and how
tested image viewers interpret them, we need to treat unspecified alpha
channels as unpremultiplied.

Task-number: QTBUG-50902
Change-Id: Id72218ed5bf702b54ffa3b5b47d6230facbfa0c4
Reviewed-by: aavit <eirik.aavitsland@theqtcompany.com>